--- a/package.json
+++ b/package.json
@@ -31,6 +31,11 @@
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^11.1.2",
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
+    "@typescript-eslint/parser": "^6.2.1",
+    "eslint": "^8.46.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.28.0",
     "rollup-plugin-typescript-paths": "^1.4.0",
     "tslib": "^2.6.0",
     "vitest": "^0.33.0"
