--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-import": "^2.28.0",
     "rollup-plugin-typescript-paths": "^1.4.0",
     "tslib": "^2.6.0",
+    "vite": "^4.4.8",
     "vitest": "^0.33.0"
   },
   "directories": {
