builde(github): attempt x

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,4 +6,4 @@ updates:
       interval: 'weekly'
     groups:
       development-dependencies:
-        - dependency-type: "development"
+        - dependency-type: "all"
