--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,5 +5,7 @@ updates:
     schedule:
       interval: 'weekly'
     groups:
+      production-dependencies:
+        dependency-type: "production"
       development-dependencies:
-        - dependency-type: "all"
+        dependency-type: "development"
