--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.28.0",
     "rollup-plugin-typescript-paths": "^1.4.0",
+    "semantic-release": "^21.1.1",
     "tslib": "^2.6.0",
     "vite": "^4.4.8",
     "vitest": "^0.34.3"
