--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -31,4 +31,5 @@ jobs:
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{secrets.npm_token}}
         run: npx semantic-release
