--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@notionhq/client": "^2.2.15"
   },
   "devDependencies": {
+    "typescript": "^5.0.0",
     "eslint": "^9.12.0",
     "@rollup/plugin-typescript": "^12.1.1",
     "@typescript-eslint/eslint-plugin": "^8.0.1",
